# Coordinator

./: .env.dev.example  .env.runtime.example  .gitignore  Cargo.toml  Containerfile  Makefile  README copy.md  README.md  api_test.py  architecture.md  deployment.md  docker-compose.yml  glossary.md  incident-2026-05-20-enclave-boot-hang.md  onchain.md  parent_forwarder.sh  protocol.md  smoke-test.md
.github/workflows/: deploy.yml
dashboard/: .env.local.example  next.config.ts
dashboard/app/: layout.tsx
dashboard/lib/: coordinator.ts
scripts/: register-coordinator.sh  smoke-local.sh
scripts/register/: hex-to-vector.mjs
src/aws/: Cargo.toml
src/coordinator/: Cargo.toml
src/coordinator/scripts/: package-lock.json  package.json  sidecar-server.ts
src/coordinator/src/: dispatch_token.rs  lib.rs  main.rs  proof.rs  routing_receipt.rs  state.rs  telemetry.rs  types.rs
src/coordinator/src/api/: admin.rs  health.rs  inference.rs  keys.rs  mod.rs  models.rs  nodes.rs  proofs.rs  usage.rs
src/coordinator/src/app/: config.rs  error.rs  mod.rs  state.rs
src/coordinator/src/auth/: key.rs  mod.rs  ratelimit.rs
src/coordinator/src/jobs/: dispatch_job.rs  mod.rs  settlement_worker.rs  store.rs  worker.rs
src/coordinator/src/marketplace/: auction.rs  completion.rs  dispatch.rs  mod.rs
src/coordinator/src/mesh/: behaviour.rs  completion_proto.rs  dispatch_proto.rs  event_loop.rs  mod.rs  peer_registry.rs  test_mesh.rs
src/coordinator/src/observability/: mod.rs  telemetry.rs
src/coordinator/src/onchain/: mod.rs  sui.rs
src/coordinator/src/payments/: mod.rs  split.rs
src/coordinator/src/persistence/: mod.rs  postgres.rs  redis.rs
src/coordinator/src/protocol/: dispatch_token.rs  mod.rs  proof.rs  routing_receipt.rs
src/coordinator/src/receipts/: mod.rs  postgres.rs
src/coordinator/src/reputation/: cache.rs  mod.rs  verify.rs
src/coordinator/src/settlement/: free.rs  mod.rs  receipt.rs
src/coordinator/tests/: auction_smoke.rs  completion_smoke.rs  encryption_smoke.rs  http_smoke.rs  mesh_smoke.rs  postgres_smoke.rs
src/init/: Cargo.toml
src/nautilus-enclave/: Cargo.toml
src/nautilus-enclave/src/: crypto.rs  lib.rs  nsm.rs
src/system/: Cargo.toml
(+16 files in other folders)
