[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coordinator"
path = "src/main.rs"

[features]
default = []
aws = ["nautilus-enclave/aws"]
sui = []
evm = []
channel = []

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# http
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bcs = "0.1"

# crypto
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
sha2 = "0.10"
hex = "0.4"

# error
anyhow = "1"
thiserror = "2"

# misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
prometheus = "0.13"

# libp2p
libp2p = { version = "0.56", features = [
    "tokio",
    "kad",
    "gossipsub",
    "noise",
    "yamux",
    "tcp",
    "quic",
    "identify",
    "mdns",
    "autonat",
    "ping",
    "request-response",
    "macros",
    "ed25519",
] }

# persistence (reached via parent VSOCK socat bridges)
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "uuid",
    "json",
] }
redis = { version = "0.27", features = ["tokio-rustls-comp"] }

# job queue
apalis = "0.7"
apalis-sql = { version = "0.7", features = ["postgres"] }

# in-tree support crates
nautilus-enclave = { path = "../nautilus-enclave" }

[dev-dependencies]
tempfile = "3"
